[M]] Fix failing JobNodeSelectorTests (#98541)
Tests have started failing in 8.11 as they are missing an appropriate value for the ML_CONFIG_VERSION_NODE_ATTR node attribute